examples/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: sno-demo
  labels:
    app: nginx-demo
spec:
  selector:
    app: nginx-demo
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
