examples/nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-demo
  namespace: sno-demo
  labels:
    app: nginx-demo
spec:
  # Host is auto-generated by OpenShift as:
  #   nginx-demo.apps.<cluster>.<baseDomain>
  # Example: nginx-demo.apps.sno.ocplab1.arunkube.org
  to:
    kind: Service
    name: nginx-demo
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
